<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Meditar">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="100dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="134dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/loto_3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/txtHoras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/contador_horas"
                android:textColor="@color/black"
                android:textSize="70sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtMinutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/contador_minutos"
                android:textColor="@color/black"
                android:textSize="70sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtSegundos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/contador_segundos"
                android:textColor="@color/black"
                android:textSize="70sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/dospuntos"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtSegundos"
                app:layout_constraintStart_toEndOf="@+id/txtMinutos"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/dospuntos"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtMinutos"
                app:layout_constraintStart_toEndOf="@+id/txtHoras"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnPausa"
                android:layout_width="0dp"
                android:layout_height="73dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect2"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/txtPausa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/pausar"
                    android:textColor="@color/black"
                    android:textSize="16sp">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnTerminar"
                android:layout_width="0dp"
                android:layout_height="73dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect3"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/txtblanco"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/detener"
                    android:textColor="@color/white"
                    android:textSize="16sp"></TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>